# TeleMail

./: .env_sample  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
notifications/: models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
notifications/migrations/: 0001_initial.py  0002_message_subject.py  0003_remove_message_is_sent_alter_deliverylog_status.py  0004_rename_recipients_message_recipient.py
