[tool.poetry]
name = "django-mailing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
psycopg2 = "^2.9.10"
redis = "^5.2.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = ".git,__pycache__,build,dist,venv,migrations"

[tool.isort]
line_length = 120